force-app/main/default/objects/Account/fields/Goto_Driver_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Goto_Driver_Meeting__c</fullName>
    <label>Goto Driver Meeting</label>
    <type>Url</type>
</CustomField>