force-app/main/default/objects/Account/fields/Hello_Sign_Admin_Sign__c.field-meta.xml
<CustomField>
    <fullName>Hello_Sign_Admin_Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hello Sign Admin Sign</label>
    <type>Checkbox</type>
</CustomField>