force-app/main/default/objects/Account/fields/Insurance_Email__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Insurance Email</label>
    <type>Checkbox</type>
</CustomField>