force-app/main/default/objects/Account/fields/MburseDashboardRedirect__c.field-meta.xml
<CustomField>
    <fullName>MburseDashboardRedirect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MburseDashboardRedirect</label>
    <type>Checkbox</type>
</CustomField>