force-app/main/default/objects/Account/fields/Pay_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pay_Period_Start_Date__c</fullName>
    <label>Pay Period Start Date</label>
    <type>Date</type>
</CustomField>