force-app/main/default/objects/Account/fields/Schedule_Goto_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Goto_Meeting__c</fullName>
    <label>Schedule Goto Meeting</label>
    <type>Url</type>
</CustomField>