force-app/main/default/objects/Account/fields/Trip_Status_Lock__c.field-meta.xml
<CustomField>
    <fullName>Trip_Status_Lock__c</fullName>
    <label>Trip Status Lock</label>
    <type>Date</type>
</CustomField>