force-app/main/default/objects/Account/fields/True_Dialog__c.field-meta.xml
<CustomField>
    <fullName>True_Dialog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>True Dialog</label>
    <type>Checkbox</type>
</CustomField>