force-app/main/default/objects/Account/fields/Vehicle_Types__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Types__c</fullName>
    <label>Vehicle Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2020 Ford F-150</fullName>
            </value>
            <value>
                <fullName>2020 Ford Escape</fullName>
            </value>
            <value>
                <fullName>2020 AWD Ford Escape</fullName>
            </value>
            <value>
                <fullName>2020 Ford F-250</fullName>
            </value>
            <value>
                <fullName>2020 Chevrolet Malibu</fullName>
            </value>
            <value>
                <fullName>2020 Dodge Journey</fullName>
            </value>
            <value>
                <fullName>2020 Dodge Durango</fullName>
            </value>
            <value>
                <fullName>2020 Ford Fusion</fullName>
            </value>
            <value>
                <fullName>2020 Full Size Sedan 2</fullName>
            </value>
            <value>
                <fullName>2020 Ford Taurus</fullName>
            </value>
            <value>
                <fullName>2020 Dodge Ram 2500</fullName>
            </value>
            <value>
                <fullName>2020 SUV 1</fullName>
            </value>
            <value>
                <fullName>2020 Mid Size Sedan 4</fullName>
            </value>
            <value>
                <fullName>2020 Full Size Sedan 3</fullName>
            </value>
            <value>
                <fullName>2020 Chevrolet Impala</fullName>
            </value>
            <value>
                <fullName>2020 Ford Explorer</fullName>
            </value>
            <value>
                <fullName>2021 Dodge Charger</fullName>
            </value>
            <value>
                <fullName>2021 Dodge Durango</fullName>
            </value>
            <value>
                <fullName>2020 Full-Size Sedan</fullName>
            </value>
            <value>
                <fullName>2020 Toyota Camry</fullName>
            </value>
            <value>
                <fullName>2020 Honda Civic</fullName>
            </value>
            <value>
                <fullName>2021 Ford F-250</fullName>
            </value>
            <value>
                <fullName>2021 Ford Escape</fullName>
            </value>
            <value>
                <fullName>2021 4x4 V8 Pickup Truck</fullName>
            </value>
            <value>
                <fullName>2021 Full Size SUV</fullName>
            </value>
            <value>
                <fullName>2021 Compact Sedan</fullName>
            </value>
            <value>
                <fullName>2021 Ford Fusion</fullName>
            </value>
            <value>
                <fullName>2021 Midsize Sedan</fullName>
            </value>
            <value>
                <fullName>2021 AWD Ford Escape</fullName>
            </value>
            <value>
                <fullName>2021 Dodge Journey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>